# KinectCloud

./: .gitignore  CMakeLists.txt  DepthSplat.sln - Verknüpfung.lnk  README.md  make.bat
libs/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  cmake_install.cmake
libs/glfw/src/: cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  update_mappings.vcxproj  update_mappings.vcxproj.filters
libs/glfw/src/Debug/: glfw3.lib
libs/glfw/src/glfw.dir/Debug/glfw.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  glfw.lastbuildstate
libs/imgui/: CMakeLists.txt
libs/imgui/backends/: imgui_impl_wgpu.cpp
libs/webgpu/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  webgpu-backend-dawn.sln
resources/: compute-shader.wgsl  depth_point_cloud.ply  quad.txt  shader.wgsl  triangle.txt
src/: Application.cpp  Application.h  Application_old.cpp  Application_old.h  BaseWindow.cpp  BaseWindow.h  Camera.cpp  Camera.h  CameraCaptureSequence.cpp  CameraCaptureSequence.h  CameraCaptureWindow.cpp  CameraCaptureWindow.h  Darkmode.cpp  Darkmode.h  GaussianModel.cpp  GaussianModel.h  Helpers.cpp  Helpers.h  K4ADeviceSelector.cpp  K4ADeviceSelector.h  Logger.cpp  Logger.h  Point3D.h  Pointcloud.cpp  Pointcloud.h  PointcloudRenderer.cpp  PointcloudRenderer.h  ResourceManager.cpp  ResourceManager.h  Structs.h  Texture.cpp  Texture.h  Uniforms.h  Utils.cpp  Utils.h  Window.cpp  Window.h  implementations.cpp  main.cpp
src/gpu.cpp/: gpu.h  half.cpp  half.h  logging.h
src/utils/: glfw3webgpu.c  implementations.cpp  k4aimguiextensions.cpp  k4aimguiextensions.h
